--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     @apply h-full bg-[url('/main-bg.svg')] bg-cover bg-no-repeat text-neutral-800;
   }
   #root {
-    @apply flex h-full min-h-screen flex-col gap-20;
+    @apply flex h-full min-h-screen flex-col gap-8;
   }
 }
 
@@ -43,6 +43,6 @@
 
 @layer utilities {
   .glass {
-    @apply bg-opacity-40 backdrop-blur-sm;
+    @apply bg-[#90d9fb];
   }
 }
