--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     @apply h-full bg-[url('/main-bg.svg')] bg-cover bg-no-repeat text-neutral-800;
   }
   #root {
-    @apply flex h-full min-h-screen flex-col gap-2;
+    @apply flex h-full min-h-screen;
   }
 }
 
@@ -38,6 +38,10 @@
   }
   .btn-danger {
     @apply bg-red-500 text-white hover:bg-red-400 active:scale-95 active:bg-red-500;
+  }
+
+  .nav-link {
+    @apply flex w-full flex-col items-center justify-center hover:bg-sky-800 p-2 duration-150 ease-in-out;
   }
 }
 
